@@ -18,6 +18,8 @@ include::include.adoc[]
 
 - `@See` is now repeatable
 
+- `@Subject` is now repeatable
+
 - Fix https://github.com/spockframework/spock/issues/994[#994] nested closures in argument constraints are not treated as implicit assertions anymore
 
 
